--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 *{
 	/*background-color: #344;*/
+	/*box-sizing: border-box;*/
 }
 
 #contenedor{
@@ -9,6 +10,18 @@
 	background-color: #334;
     
 
+}
+
+.bar-nav{
+	background-color: #434;
+	width: 100%;
+	height: 70px;
+
+}
+
+h1{
+	font-size: 2.1em;
+	
 }
 
 h3{  font-size: 1.3em;
