--- a/estilo.css
+++ b/estilo.css
@@ -13,25 +13,34 @@
 }
 
 .bar-nav{
-	background-color: #344;
+	color: "333";
 	width: 100%;
 	height: 70px;
+	background-color: #344;
 
+}
+.bar-nav:hover{
+	color: white;
+
+	
 }
 
 h1{
 	font-size: 2.1em;
+	/*font-weight: bold;*/
 
 }
 
 h3{  font-size: 1.3em;
    /* align-items: center;*/
     text-align: center;
+    
 }
 
 p{  font-size: 1.5em;
    /* align-items: center;*/
     text-align: center;
+
 }
 
 .estudio{
@@ -45,8 +54,10 @@ p{  font-size: 1.5em;
 .estudio:hover{
 	background: #777;
 	
+
 }
 
 .title{
 	text-align: center;
+
 }
