--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,8 @@
 *{
 	/*background-color: #344;*/
-	/*box-sizing: border-box;*/
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 #contenedor{
