--- a/estilo.css
+++ b/estilo.css
@@ -1,51 +1,54 @@
-*{
+* {
 	/*background-color: #344;*/
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
 
-#contenedor{
+#contenedor {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
 	background-color: #334;
-    
+
 
 }
 
-.bar-nav{
+.bar-nav {
 	color: "333";
 	width: 100%;
 	height: 70px;
 	background-color: #344;
 
 }
-.bar-nav:hover{
+
+.bar-nav:hover {
 	color: white;
 
-	
+
 }
 
-h1{
+h1 {
 	font-size: 2.1em;
 	/*font-weight: bold;*/
 
 }
 
-h3{  font-size: 1.3em;
-   /* align-items: center;*/
-    text-align: center;
-    
-}
-
-p{  font-size: 1.5em;
-   /* align-items: center;*/
-    text-align: center;
+h3 {
+	font-size: 1.3em;
+	/* align-items: center;*/
+	text-align: center;
 
 }
 
-.estudio{
+p {
+	font-size: 1.5em;
+	/* align-items: center;*/
+	text-align: center;
+
+}
+
+.estudio {
 	width: 300px;
 	height: 200px;
 	margin: 20px;
@@ -53,13 +56,13 @@ p{  font-size: 1.5em;
 
 }
 
-.estudio:hover{
+.estudio:hover {
 	background: #777;
 	
 
 }
 
-.title{
+.title {
 	text-align: center;
 
 }
